<resources>
    <string name="app_name">Let\'sQuiz</string>
    <string name="signin_sign_in">Zaloguj</string>
    <string name="signin_username">Login</string>
    <string name="signin_password">Hasło</string>
    <string name="signin_login">LOGUJ</string>
    <string name="signin_forgot_password">Zapomniałeś hasła?</string>
    <string name="signin_or">lub</string>
    <string name="signin_sign_up">Zarejestruj się</string>

    <string name="signup_create_account">Utwórz konto</string>
    <string name="signup_username">Login</string>
    <string name="signup_e_mail">E-mail</string>
    <string name="signup_password">Hasło</string>
    <string name="signup_sign_up">REJESTRUJ</string>
    <string name="signup_info">Masz już konto?</string>
    <string name="signup_sign_in">Zaloguj się</string>
    <string name="profile_main_login">Nazwa użytkownika</string>
    <string name="profile_rate">Ocena</string>
    <string name="profile_quiz_taken">Rozwiązane quizy</string>
    <string name="profile_quiz_taken_count">Liczba</string>
    <string name="profile_rate_number">Liczba</string>
    <string name="profile_login">Login</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_password">Hasło</string>

    <string name="quizmain_title">Tytuł</string>
    <string name="quizmain_description">Opis</string>
    <string name="quizmain_tags">Tagi (rozdzielone spacją)</string>
    <string name="quizmain_final_comment">Uwagi końcowe</string>
    <string name="quizmain_create_quiz">STWÓRZ QUIZ</string>
    <string name="quizmain_privacy">"Czy prywatny?"</string>
    <string name="questions_question_text">PYTANIE</string>
    <string name="questions_answer_text">Odpowiedź</string>

    <string name="drawer_menu_create_quiz">Utwórz quiz</string>
    <string name="drawer_menu_profile">Profil</string>
    <string name="drawer_menu_logout">Wyloguj się</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="report_score">Podsumowanie</string>
    <string name="report_user_score">13</string>
    <string name="report_max_score">15</string>
    <string name="report_slash">/</string>
    <string name="report_author_message">Wiadomość od autora</string>
    <string name="item_answer">Answer</string>
    <string name="question_display_btn_back"><![CDATA[<]]></string>
    <string name="question_display_btn_next"><![CDATA[>]]></string>
    <string name="create_question_btn_end">zakończ</string>
    <string name="question_display_btn_add">Dodaj odp</string>
    <string name="create_question_ask_question">Zadaj pytanie</string>
    <string name="create_question_points">Pkt</string>
    <string name="detail_quiz_questions">Pytań:</string>
    <string name="details_quiz_author">Autor:</string>
    <string name="detail_quiz_description">Opis:</string>
    <string name="detail_quiz_tags">Tagi:</string>
    <string name="detail_quiz_participate">Przejdź do quizu!</string>
    <string name="community_add_btn">dodaj</string>
    <string name="community_friends">znajomi</string>
    <string name="community_class">klasa</string>
    <string name="drawer_menu_community">Społeczność</string>
    <string name="community_accept">Akceptuj</string>
    <string name="community_decline">Anuluj</string>
    <string name="quizmain_time">Czas</string>
    <string name="quizmain_minutues">min</string>
    <string name="questions_point">Liczba punktów</string>
    <string name="question_points">pkt</string>
    <string name="quizmain_minutue">10</string>
    <string name="main_search">Wyszukaj</string>
    <string name="main_no_quizes">Brak quizów!</string>
    <string name="community_toolbar_invitation">invitation</string>
    <string name="community_toolbar_add">add_friend</string>
    <string name="profile_add_add_friend_btn">Dodaj do znajomych!</string>
    <string name="drawer_menu_search">Wyszukaj</string>
    <string name="drawer_menu_user_quizes">Moje quizy</string>
    <string name="drawer_menu_reports">Raporty</string>
    <string name="search_checkbox">Wyszukiawnie kodu</string>
    <string name="item_message_decline">Usuń</string>
    <string name="item_message_accept">Akceptuj</string>
    <string name="community_invite_msg_friends">Znajomi</string>
    <string name="community_invite_msg_quizes">Quizy</string>
    <string name="detail_quiz_invite">zaproś</string>
    <string name="item_quiz_invite_from_text">od:</string>


</resources>