<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_search"
            android:title="@string/drawer_menu_search" />
        <item
            android:id="@+id/drawer_menu_create_quiz"
            android:title="@string/drawer_menu_create_quiz" />
        <item
            android:id="@+id/drawer_menu_profile"
            android:title="@string/drawer_menu_profile" />
        <item
            android:id="@+id/drawer_menu_user_quizes"
            android:title="@string/drawer_menu_user_quizes" />
        <item
            android:id="@+id/drawer_menu_community"
            android:title="@string/drawer_menu_community" />
        <item
            android:id="@+id/drawer_menu_reports"
            android:title="@string/drawer_menu_reports" />
        <item
            android:id="@+id/drawer_menu_logout"
            android:title="@string/drawer_menu_logout" />
    </group>

</menu>