<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_05"
    tools:context=".Projekt.Activities.SignInActivity">

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/signin_sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/signin_username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="20dp"
        android:hint="@string/signin_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_03"
        android:text="@string/signin_login" />

    <TextView
        android:id="@+id/signin_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signin_forgot_password"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signin_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/signin_or"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signin_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_or"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/signin_sign_up"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>