<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_05"
    tools:context=".Projekt.Activities.SignUpActivity">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/signup_create_account"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/signup_username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/signup_e_mail"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="20dp"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signup_image"
        android:layout_width="153dp"
        android:layout_height="141dp"
        android:layout_below="@+id/signup_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="238dp"
        android:background="@drawable/shape_image_view_border"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_screen_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/purple_03"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signup_add_image"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/signup_image"
        app:layout_constraintVertical_bias="0.019" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_03"
        android:text="@string/signup_sign_up" />

    <TextView
        android:id="@+id/signup_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_sign_up"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signup_info"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/signup_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_info"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/signup_sign_in"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>