<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Projekt.Activities.QuizMainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/quizmain_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_05"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24_white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@color/purple_05"
            >

            <ImageView
                android:id="@+id/quizmain_image"
                android:layout_width="278dp"
                android:layout_height="147dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:src="@drawable/add_screen_image_placeholder" />

            <EditText
                android:id="@+id/quizmain_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quizmain_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="#30ffffff"
                android:hint="@string/quizmain_title"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/quizmain_privacy"
                android:layout_width="123dp"
                android:layout_height="46dp"
                android:layout_alignBottom="@+id/quizmain_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="272dp"
                android:layout_marginBottom="-10dp"
                android:layoutDirection="rtl"
                android:text="@string/quizmain_privacy"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/quizmain_time"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:text="@string/quizmain_time"
                android:textColor="@color/purple_07"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/quizmain_timer"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:hint="@string/quizmain_minutues"
                android:inputType="number"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@color/white"
            android:padding="2dp">

            <EditText
                android:id="@+id/quizmain_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_07"
                android:drawablePadding="20dp"
                android:hint="@string/quizmain_description"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/quizmain_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quizmain_description"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_07"
                android:drawablePadding="20dp"
                android:hint="@string/quizmain_tags"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/quizmain_final_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quizmain_tags"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_07"
                android:drawablePadding="20dp"
                android:hint="@string/quizmain_final_comment"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/quizmain_start_creating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quizmain_final_comment"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/purple_05"
                android:text="@string/quizmain_create_quiz" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>