<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_05"
    tools:context=".Projekt.Activities.ReportActivity">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/report_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_05"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24_white" />
-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_05"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/report_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="@string/report_score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/report_score_table"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/report_score"
            android:layout_marginTop="42dp"
            android:background="#30ffffff" />

        <TextView
            android:id="@+id/report_user_score"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="139dp"
            android:text="@string/report_user_score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/report_max_score"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="70dp"
            android:text="@string/report_max_score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/report_slash"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="100dp"
            android:text="@string/report_slash"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/report_author_message"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/report_score_table"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:background="#30ffffff"
            android:text="@string/report_author_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <!--<LinearLayout
            android:id="@+id/reprot_vote_layout"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:layout_below="@+id/report_author_message"
            android:layout_marginTop="4dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/report_vote_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/purple_05"
                android:src="@drawable/ic_baseline_thumb_down_24" />

            <ImageButton
                android:id="@+id/report_vote_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/purple_05"
                android:src="@drawable/ic_baseline_thumb_up_24" />
        </LinearLayout>-->

        <ImageButton
            android:id="@+id/report_home"
            android:layout_width="94dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="95dp"
            android:background="@color/purple_05"
            android:src="@drawable/ic_baseline_home_24" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>